version 1.00BETA will be released soon