@@ -5,11 +5,9 @@ Version 1.0 BETA
 
     - setting for program temperatures via LCD
     - window open function
-    - batt low indicator
-    - E2 message
-    - E3 message
     - Valve protection (CyCL)
     - hourbar line
+    - read/write ee_timers directly from EEPROM / save 128 bytes in RAM
     - default setting restore
     - improve doxygen comments
     - user documentation generated by doxygen 
