@@ -230,5 +230,6 @@ void task_lcd_update(void);
 #define LCD_STRING_OPEn        14
 #define LCD_STRING_CyCL        15
 #define LCD_STRING_BAtt        16
-
+#define LCD_STRING_E2          17
+#define LCD_STRING_E3          18
 
